@releng removing intermediate parent pom and adding the modules to the reactor
git-svn-id: https://svn.apache.org/repos/asf/sling/trunk@1594849 13f79535-47bb-0310-9956-ffa450edef68